<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/signuppage">

    <TextView
        android:id="@+id/signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/singleday"
        android:text="@string/sign_name"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signup_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/singleday"
        android:text="@string/sign_id"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/singleday"
        android:text="@string/signin_pw"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:hint="@string/signup_name"
        app:layout_constraintBottom_toTopOf="@+id/signup_Id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginBottom="180dp"
        android:hint="@string/signin_pwhint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_pw"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:hint="@string/signin_idhint"
        app:layout_constraintBottom_toTopOf="@+id/signup_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/signup_signup"
        android:fontFamily="@font/singleday"
        android:textSize="25dp"
        android:textColor="@color/buttonFontColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

</androidx.constraintlayout.widget.ConstraintLayout>